reordered code, changed single file creation to multiple through -more- separator